# tensorsketch-core

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  bench.py
docs/: SUMMARY.md  build_docs.py  index.md
docs/concepts/: agents.md  code-and-canvas.md  coordination.md  durability.md  evaluation.md  execution-model.md  mcp.md  middleware.md  nodes-and-graphs.md  patterns.md  providers.md  registry.md  serving.md  state-and-channels.md  streaming.md  tools.md  tracing.md
docs/design/: decisions.md  framework-design.md  roadmap.md  status.md
docs/guides/: getting-started.md  installation.md  studio.md
docs/images/: README.md
docs/site/: index.html
examples/: bring_your_own_database.py  calculator_agent.py  counting_loop.py  durable_resume.py  dynamic_fanout.py  evaluation.py  map_reduce.py  mcp_interop.py  middleware_retry.py  multi_agent.py  registry_by_name.py  research_desk.py  serving.py  streaming.py  support_router.py  tracing.py  wiring_operators.py
src/tensorsketch/: __init__.py  messages.py  middleware.py  patterns.py  registry.py  tools.py
src/tensorsketch/agents/: __init__.py  agent.py  coordination.py  llm.py
src/tensorsketch/canvas/: __init__.py  __main__.py  extract.py  holes.py  ir.py  reconstruct.py  server.py
src/tensorsketch/canvas/studio/: index.html  studio.css  studio.js
src/tensorsketch/core/: __init__.py  channels.py  context.py  errors.py  graph.py  node.py  schema.py  send.py  wiring.py
src/tensorsketch/eval/: __init__.py  case.py  drift.py  graders.py  judge.py  online.py  reporters.py  runner.py  sandbox.py
src/tensorsketch/interop/: __init__.py  mcp.py
src/tensorsketch/observability/: __init__.py  cost.py  export.py  otel.py  tracing.py
src/tensorsketch/providers/: __init__.py  anthropic.py  base.py  fake.py  google.py  openai.py
src/tensorsketch/runtime/: __init__.py  checkpoint.py  engine.py  serialization.py  streaming.py
src/tensorsketch/runtime/backends/: __init__.py  postgres.py  redis.py  sql.py
src/tensorsketch/serve/: __init__.py  _adapter.py  _sse.py  a2a.py  agui.py  openai.py
tests/: test_agents.py  test_anthropic.py  test_backends.py  test_canvas_extract.py  test_canvas_holes.py  test_canvas_layout.py  test_canvas_reconstruct.py  test_canvas_server.py  test_channels.py  test_coordination.py  test_durability.py  test_edge_cases.py  test_eval.py  test_exporters.py  test_fanout.py  test_graph.py  test_mcp.py  test_middleware.py  test_patterns.py  test_providers.py  test_registry.py  test_serve.py  test_streaming.py  test_studio_live.py  test_tracing.py  test_wiring.py
